# ChaosCraze

./: .gitignore  CMakeLists.txt  Phone_Window.c  QuadTreeExample.cpp  ds.cpp  ds.h  main.cpp  main2.cpp  shit.cpp
.cache/clangd/index/: ds.h.2C647FF3B12F107B.idx  gui_CameraButton.h.34FC341AEACCA2E0.idx  main.cpp.4555B527417DACB2.idx  raygui.h.5A9610C38FD02BC7.idx
assets/: BluishStyle.rgs  GrassLand.json  entefe.rgs
assets/TileMap/: Final.json  Map.json  Map2.json  untitled.tmj
assets/effects/: Capture.aseprite  Pixel Holy Spell Effect 32x32 Pack 3.rar
examples/: NPC.cpp
headers/: UI.h  collisions.h  ds.h  effects.h  gui_CameraButton.h  gui_cameraToggle.h  gui_menu.h  gui_phoneWindow.h  gui_statusBar.h  gui_volume_bar.h  layout_name.rgl  sound.h  terminal.h
